public/stylesheets/style.css
/*
  Black: #020307
  White: #FFFFFF
  Grey: #9FA0A0
  Yellow: #FDD10A
  Blue: #29B6F6
  Pale Blue: #ccedfb;
  Green: #8FC31F
  Pale Green: #ddedbb
  Pink: #d95097
*/

html, body {
  background: #29B6F6;
}

#content {
  box-sizing: border-box;
  padding: 20px;
  width: 100%;
  max-width: 1140px;
  margin: auto;
}

.mdl-card {
  width: 100%;
  min-height: initial;
  padding: 20px;
}

header {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 20px;
  padding: 20px;
  text-align: center;
}

#logo {
  width: 100%;
}

#pagetitle {
  font-family: 'Kadwa', serif;
  font-weight: 600;
  color: #8fc31f;
  font-size: 55px;
  text-shadow:
   -1px -1px 0 #9fa0a0,  
    1px -1px 0 #9fa0a0,
    -1px 1px 0 #9fa0a0,
     1px 1px 0 #9fa0a0;
  letter-spacing: 3px;
  padding: 20px;
}

.mdl-card ~ .mdl-card, .large .mdl-card {
  margin-top: 20px;
}

.large .mdl-card .mdl-card {
  margin-top: 0px;
}

.large .mdl-card .mdl-card ~ .mdl-card {
  margin-top: 20px;
}

.small .mdl-card ~ .mdl-card {
  margin-top: 10px;
}

#banner {
  text-align: center;
}

#hemisphere-chooser {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

.creature {
  display: grid;
  grid-template-columns: 0.5fr repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 10px;
  grid-row-gap: 0px;
}

.creature .icon {
  width: 50px;
  margin: auto;
}

.creature .bells {
  width: 15px;
  position: relative;
  bottom: 3px;
  margin-right: 4px;
}

.creature i {
  color: #29B6F6;
  margin-left: auto;
  margin-right: auto;
}

.name {
  margin-bottom: 4px;
  margin-top: 6px;
}

.center {
  text-align: center;
}

.southerndata {
  display: none;
}

.large {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 0px;
}

.large .creature {
  min-height: 100px;
}

.monthmenubutton {
  position: fixed;
  z-index: 2;
  left: 3px;
  top: 3px;
}

.mdl-menu__container {
  position: fixed;
}

.monthmenu a {
  text-decoration: none;
}

#footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 0px;
}

pre {
  margin: 0;
  font-size: 12px;
  overflow: auto;
}

@media only all and (max-width:1000px) { 
  .large {
    display: none !important;
  }
}

@media only all and (min-width:999px) { 
  .small {
    display: none !important;
  }
}

